force-app/main/default/objects/OrderItem/fields/Approval_Denial_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Denial_Date__c</fullName>
    <label>Approval/Denial Date</label>
    <type>Date</type>
</CustomField>