force-app/main/default/objects/OrderItem/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description
  >Per-line minimum NetUnitPrice after promo adjustments, sourced from Pricing_Matrix__c.Floor_Price__c by the Price Matrix pricing element. Read by the Apply Promotion Value formula (MAX(Floor_Price__c, NetUnitPrice - Promotion_Value__c)) and by PromoCodeAllocationEngine to cap per-line discount stacking. Null = no floor (effective floor of 0).</description>
    <inlineHelpText
  >Auto-populated from the Pricing Matrix entry. Read-only at the order level.</inlineHelpText>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>