force-app/main/default/objects/OrderItem/fields/Global_Partner__c.field-meta.xml
<CustomField>
    <fullName>Global_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Global Partner)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>