force-app/main/default/objects/OrderItem/fields/Is_Enterprise_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Enterprise_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enterprise Price</label>
    <type>Checkbox</type>
</CustomField>