force-app/main/default/objects/OrderItem/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <formula>Order.BillingEmailAddress</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Email</label>
    <type>Text</type>
</CustomField>