force-app/main/default/objects/OrderItem/fields/Members_Company__c.field-meta.xml
<CustomField>
    <fullName>Members_Company__c</fullName>
    <formula>Order.Member_s_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member&apos;s Company</label>
    <type>Text</type>
</CustomField>