force-app/main/default/objects/OrderItem/fields/Partner_Membership_Approver__c.field-meta.xml
<CustomField>
    <fullName>Partner_Membership_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Membership Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>