force-app/main/default/objects/OrderItem/fields/Price_Matrix_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Matrix_Expiration_Date__c</fullName>
    <formula>PriceMatrixRecordId__r.ExpirationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Matrix Expiration Date</label>
    <type>DateTime</type>
</CustomField>