force-app/main/default/objects/OrderItem/fields/PriceMatrix_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>PriceMatrix_Sales_Price__c</fullName>
    <label>PriceMatrix Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>