force-app/main/default/objects/OrderItem/fields/PriceMatrixRecordId__c.field-meta.xml
<CustomField>
    <fullName>PriceMatrixRecordId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PriceMatrixRecordId</label>
    <referenceTo>Pricing_Matrix__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>