force-app/main/default/objects/OrderItem/fields/Primary_Chapter__c.field-meta.xml
<CustomField>
    <fullName>Primary_Chapter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Chapter</label>
    <type>Checkbox</type>
</CustomField>