force-app/main/default/objects/OrderItem/fields/Promo_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promo_Adjustment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Aggregate promo discount amount on this line. Stamped by the Apex apply-flow allocation engine before pricing runs; consumed by the pricing-procedure Formula element that subtracts it from NetPrice (floored at 0). See docs/promo-code/checkout-apply-flow.md §6.1.</description>
    <label>Promo Adjustment Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>