force-app/main/default/objects/OrderItem/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <description>How the applied promotion is interpreted on this order line. Stamped by Apex at apply time.</description>
    <inlineHelpText>The kind of promotional adjustment applied to this line. Populated by pricing pre-hook.</inlineHelpText>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
                <default>true</default>
                <label>Amount</label>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>