force-app/main/default/objects/OrderItem/fields/Promotion_Value__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Value__c</fullName>
    <description>Aggregate currency amount discounted on this line by the apply flow. Written by the pricing pre-hook from Pending Promo_Code_Item__c records. The pricing-procedure Formula element subtracts this value from NetPrice (floored at 0).</description>
    <inlineHelpText>Currency amount discounted from this line by applied promo codes. Populated by the pricing pre-hook.</inlineHelpText>
    <label>Promotion Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>